# MiniC-Compiler

./: .gitignore  .projections.json  CMakeLists.txt  README.md  ejemplo.c  main.cpp  main.py
Arbol/: Nodo.py  Terminales.py
Componentes/: Excepciones.py  Globales.py  Leer.py  Lexico.py  Pila.py  Semantico.py  Sintactico.py  TablaSimbolos.py
Gramatic/: compilador.inf  compiler.inf
Gramatica/: compilador.inf
Include/: Lexical.h  Read.h  Semantical.h  Sintactical.h  Syntactic.h
Include/namespaceAnalyzers/: Lexic.h  Semantic.h  Syntactic.h
Include/namespaceExceptions/: Exceptions.h  FileException.h  GeneralException.h  LexicException.h  SyntacticException.h
Include/namespaceFiles/: Read.h
Include/namespaceStack/: GrammarElement.h  NonTerminal.h  StackElement.h  State.h  Terminal.h
src/: Lexical.cpp  Read.cpp  Semantical.cpp  Sintactical.cpp  Syntactic.cpp
src/namespaceAnalyzers/: Lexic.cpp  Semantic.cpp  Syntactic.cpp
src/namespaceExceptions/: Exceptions.cpp  FileException.cpp  LexicException.cpp  SyntacticException.cpp
src/namespaceFiles/: Read.cpp
src/namespaceStack/: GrammarElement.cpp  NonTerminal.cpp  StackElement.cpp  State.cpp  Temrinal.cpp  Terminal.cpp
